--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
 html, body {
     margin: 0;
-    padding: 0;
-  }
+    padding: 0;}
+    h1{
+      color:  rgb(255, 255, 255) ; 
+    }
+    h2 {
+      color:  rgb(255, 255, 255) ; 
+    }
+    h3 {
+      color:  rgb(255, 255, 255) ; 
+    }
+
+
+    p {
+      color: rgb(255, 255, 255); 
+    }
+  
   canvas {
     display: block;
   }
